--- a/package.json
+++ b/package.json
@@ -3,7 +3,10 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "apollo-client": "^1.4.0",
+    "graphql-tag": "^2.2.1",
     "react": "^15.5.4",
+    "react-apollo": "^1.4.2",
     "react-dom": "^15.5.4"
   },
   "devDependencies": {
