--- a/package.json
+++ b/package.json
@@ -10,12 +10,14 @@
     "react-dom": "^15.5.4"
   },
   "devDependencies": {
+    "flow-bin": "^0.47.0",
     "react-scripts": "1.0.7"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "flow": "flow"
   }
 }
