--- a/package.json
+++ b/package.json
@@ -10,12 +10,12 @@
     "react-dom": "^15.5.4"
   },
   "devDependencies": {
-    "flow-bin": "^0.47.0",
     "autoprefixer": "7.1.0",
     "babel-core": "6.24.1",
     "babel-eslint": "7.2.3",
     "babel-jest": "20.0.3",
     "babel-loader": "7.0.0",
+    "babel-plugin-flow-react-proptypes": "^3.2.0",
     "babel-preset-react-app": "^3.0.0",
     "babel-runtime": "6.23.0",
     "case-sensitive-paths-webpack-plugin": "1.1.4",
@@ -31,6 +31,7 @@
     "eslint-plugin-react": "7.0.1",
     "extract-text-webpack-plugin": "2.1.0",
     "file-loader": "0.11.1",
+    "flow-bin": "^0.47.0",
     "fs-extra": "3.0.1",
     "html-webpack-plugin": "2.28.0",
     "jest": "20.0.3",
